k8s/base/deployment-main.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realworldtt-deployment
  namespace: default
  labels:
    app: realworldtt
    test: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: realworldtt
  template:
    metadata:
      labels:
        app: realworldtt
    spec:
      containers:
        - name: realworldtt
          image: the9thlime/realworldtt:latest
          ports:
            - containerPort: 8010
          resources:
            limits:
              cpu: 1000
              memory: 350Mi
---

apiVersion: v1 
kind: Namespace
metadata:
  name: devops-tools
